kubernetes/apps/kuska/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuska-service
  namespace: kuska
  labels:
    app: kuska
spec:
  type: ClusterIP
  selector:
    app: kuska
  ports:
    - name: http
      port: 4003
      targetPort: 4003
      protocol: TCP
